@@ -3,8 +3,10 @@ partman-auto (72) UNRELEASED; urgency=low
   * Revert support for erasing encrypted LVM volumes introduced in (69).
     There are too many problems with it and starting fresh seems better than
     stacking change on change to fix it. Closes: #425829.
+  * lvm-wipe-disk(): needs device-mapper support while removing devices.
+  * lvm-wipe-disk(): fix restart logic.
 
- -- Frans Pop <fjp@debian.org>  Tue, 04 Dec 2007 11:38:09 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 12:19:10 +0100
 
 partman-auto (71) unstable; urgency=low
 
